--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
 <div class = "navbar navbar-default navbar-fixed-bottom">
-  <p class="navbar-text small">
-    <a href="http://www.colorado.edu/geolsci/" target="_new">Department of Geosciences</a> |
-    <a href="http://www.colorado.edu/" target="_new">University of Colorado Boulder</a>
-  </p>
-  <p class="navbar-text pull-right small">
-    &copy; Copyright 2015 <a href="mailto:{{ site.email }}">{{ site.owner }}</a>
-  </p>
+  <div class="container" style="padding: 0px;">
+    <p class="navbar-text small">
+      <a href="http://www.colorado.edu/geolsci/" target="_new">Department of Geosciences</a> |
+      <a href="http://www.colorado.edu/" target="_new">University of Colorado Boulder</a>
+    </p>
+    <p class="navbar-text pull-right small">
+      &copy; Copyright 2015 <a href="mailto:{{ site.email }}">{{ site.owner }}</a>
+    </p>
+  </div>
 </div>
