--- a/css/style.scss
+++ b/css/style.scss
@@ -59,3 +59,88 @@ body {
   font-size: 14pt;
   img { width: 100%; }
 }
+
+// for front page
+$front-page-lines-thick: 3px solid white;
+$front-page-lines-thin: 2px solid white;
+.front-page {
+  background-image: url('../images/yellowstone_lowres.jpg');
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  border: $front-page-lines-thick;
+  //border-radius: 6px;
+  box-sizing: border-box;
+  min-height: 500px !important; // can set minimum height here
+
+  table {
+    width: 100%;
+    color: white; // text color
+    table-layout: fixed;
+  }
+}
+
+.front-page-title {
+  background:rgba(0, 0, 0,.3); // opacity for front page title
+  padding: 20px;
+  border-top: $front-page-lines-thick;
+  border-bottom: $front-page-lines-thick;
+  h3 {margin: 0px;}
+  h4 {margin: 0px; margin-top: 10px;}
+  a { text-decoration: none; color: inherit; }
+}
+
+.front-page-info {
+  border-left: $front-page-lines-thick;
+  border-bottom: $front-page-lines-thick;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 10px;
+}
+
+.front-page-news {
+  vertical-align: top;
+  background: $brand-info;
+}
+
+.front-page-lab {
+  border-bottom: 0px solid;
+  background: black;
+  text-align: right;
+  h3 { margin: 0px; }
+  a { text-decoration: none; color: inherit; }
+}
+
+.front-page-gap {
+  height: 50px;
+  td:nth-child(1) { width: 50%; }
+  td:nth-child(2) {
+    border-left: $front-page-lines-thin;
+    border-right: $front-page-lines-thin;
+  }
+  td:nth-child(3) { width: 50%; }
+}
+
+.front-page-menu {
+  border: $front-page-lines-thin;
+}
+
+.btn-group-vertical.front-page-menu-group {
+  width: 100%;
+  .btn:first-child { border-radius: 0 0 0 0; }
+  .btn:last-child { border-radius: 0 0 0 0; }
+  .btn {margin-left: 0; margin-top: 0; }
+}
+
+.front-page-links  {
+  background:rgba(0, 0, 0,.3); // set opacity for front page links
+  border: 0px solid;
+  text-align: left; // alignment of menu links
+  -webkit-transition: all 0.3s;
+     -moz-transition: all 0.3s;
+          transition: all 0.3s;
+}
