styling update for mobile compatibility

--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,7 @@ body {
 /*******************************/
 /********* FRONT PAGE **********/
 /*******************************/
+// Note: not sure this is best done with the table, could probably also do just divs
 
 $front-page-lines-thick: 3px solid white;
 $front-page-lines-thin: 2px solid white;
