--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,8 @@
       <a href="http://www.colorado.edu/" target="_new">University of Colorado Boulder</a>
     </p>
     <p class="navbar-text pull-right small">
-      &copy; Copyright 2015 <a href="mailto:{{ site.email }}">{{ site.owner }}</a>
+      Copyright {{ site.time | date: '%Y' }} &copy; <a href="mailto:{{ site.email }}">Kopf Lab</a>
+      | Powered by <a href="http://jekyllrb.com">Jekyll</a> and <a href="http://github.com">GitHub</a>
     </p>
   </div>
 </div>
