--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: plain
+---
 
-  {% include head.html %}
-
-  <body>
-
-    {% include navbar.html %}
-
-    <div class="text-center page-top-image"
-      style="background-image:url('images/{{ page.image }}');">
-    	<h3>Stable Isotope Geomicrobiology</h3>
-      <h4>University of Colorado Boulder</h4>
+<!-- Navigation bar -->
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span> Kopf Lab</a>
     </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        {% assign pages = site.pages | sort:"weight"  %}
+        {% for p in pages %}
+          {% if p.menu and p.align != "right" %}
+            <li class="{% if p.status == 'disabled' %}disabled{% elsif p.url == page.url %}active{% endif %}">
+              <a href="{% if p.status != 'disabled' %}{{ p.url }}{% endif %}">
+                {% if p.icon %} <span class="glyphicon glyphicon-{{ p.icon }}"></span> {% endif %}
+                {{ p.menu }}
+              </a>
+            </li>
+          {% endif %}
+        {% endfor %}
+      </ul>
 
-    <div class="container">
-
-      {{ content }}
+      <ul class="nav navbar-nav navbar-right">
+        {% assign pages = site.pages | sort:"weight"  %}
+        {% for p in pages %}
+          {% if p.menu and p.align == "right" %}
+            <li class="{% if p.status == 'disabled' %}disabled{% elsif p.url == page.url %}active{% endif %}">
+              <a href="{{ p.url }}">
+                {% if p.icon %} <span class="glyphicon glyphicon-{{ p.icon }}"></span> {% endif %}
+                {{ p.menu }}
+              </a>
+            </li>
+          {% endif %}
+        {% endfor %}
+      </ul>
 
     </div>
+  </div>
+</div>
 
-    {% include footer.html %}
+<!-- Content -->
+<div class="container">
 
+  {{ content }}
 
-  </body>
-</html>
+</div>
+
+<!-- Footer -->
+<div class = "navbar navbar-default navbar-fixed-bottom">
+  <div class="container" style="padding: 0px;">
+    <p class="navbar-text small">
+      <a href="http://www.colorado.edu/geolsci/" target="_new">Department of Geosciences</a> |
+      <a href="http://www.colorado.edu/" target="_new">University of Colorado Boulder</a>
+    </p>
+    <p class="navbar-text pull-right small">
+      Copyright {{ site.time | date: '%Y' }} &copy; <a href="mailto:{{ site.email }}">Kopf Lab</a>
+      | Powered by <a href="http://jekyllrb.com">Jekyll</a> and <a href="http://github.com">GitHub</a>
+    </p>
+  </div>
+</div>
