--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -1,7 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% include head.html %}
+<head>
+  <!-- Meta -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="{{ site.description }}">
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+
+  <!-- Style -->
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="icon" type="image/png" href="{{ site.icon }}" />
+
+  <!-- Javascript -->
+  <script src="/js/jquery-1.11.3.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-74777216-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+
+  {% if page.slideshow_speed %}
+  <!-- Slide show -->
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('.carousel').carousel({interval: {{ page.slideshow_speed }}});
+    });
+  </script>
+  {% endif %}
+
+</head>
 
 <body>
 
