lightbox support added

--- a/css/style.scss
+++ b/css/style.scss
@@ -33,3 +33,10 @@ $front-page-height: 700px;
 
 /***** General settings ******/
 @import "general";
+
+
+
+/***** Image settings ******/
+.border {
+  border: 2px solid rgb(33,33,33);
+}
