--- a/css/style.scss
+++ b/css/style.scss
@@ -34,32 +34,40 @@ $front-page-height: 700px;
 /***** General settings ******/
 @import "general";
 
-.jumbotron{
-  background: url("../images/front_page/rmnp_methane_bubbles_lowres.jpg") no-repeat center center;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.container .jumbotron {
-  //border-radius: 0px;
-}
-
-@media (min-width: 768px){
-    .navbar-nav{
-        float:none;
-        margin: 0 auto;
-        display: table;
-        table-layout: fixed;
-    }
-}
 
 /***** Image settings ******/
 .border {
   border: 2px solid rgb(33,33,33);
+}
+
+// page divider
+.page-divider {
+	$divider-color: #ddd;
+  display: block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  border-top: 1px solid $divider-color;
+  .one {
+    position: relative;
+    top: -9px;
+    display: block;
+    background: $divider-color;
+    width: 18px;
+    height: 18px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+  }
+  .two {
+    position: relative;
+    top: -26px;
+    display: block;
+    background: rgb(255, 255, 255);
+    width: 16px;
+    height: 16px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+  }
 }
