--- a/css/style.scss
+++ b/css/style.scss
@@ -35,6 +35,32 @@ $front-page-height: 700px;
 @import "general";
 
 
+.jumbotron{
+  background: url("../images/front_page/yellowstone_lowres.jpg") no-repeat center center;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.container .jumbotron {
+  //border-radius: 0px;
+}
+
+@media (min-width: 768px){
+    .navbar-nav{
+        float:none;
+        margin: 0 auto;
+        display: table;
+        table-layout: fixed;
+    }
+}
+
+
 /***** Image settings ******/
 .border {
   border: 2px solid rgb(33,33,33);
