--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,18 +3,21 @@ layout: plain
 ---
 
 <!-- Navigation bar -->
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
+<div class="container">
+
+<div class="navbar navbar-inverse center" role="navigation" style = "margin-bottom: 10px;"> <!-- navbar-fixed-top -->
+  <!--<div class="container">-->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span> Kopf Lab</a>
+      <!--<a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span> Kopf Lab</a>-->
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
+    <div class="collapse navbar-collapse" id="myNavbar" style="width: 100%; text-align: center;">
+      <ul class="nav navbar-nav">
+        <li><a href="/"><span class="glyphicon glyphicon-home"></span> Kopf Lab</a></li>
         {% assign pages = site.pages | sort:"weight"  %}
         {% for p in pages %}
           {% if p.menu and p.align != "right" %}
@@ -43,8 +46,31 @@ layout: plain
       </ul>
 
     </div>
-  </div>
+  <!--</div>-->
 </div>
+
+<div class="jumbotron">
+
+  <div class="text-center" style="color: #fff;">
+      <h3>Stable Isotope Geomicrobiology</h3>
+    <h4>University of Colorado Boulder</h4>
+  </div>
+
+<!--
+  <div class="well">
+
+    <h2 style="color: #fff;">
+    {{ if page.menu }} {{ page.menu }}{{ endif }}
+    {{ if page.categories }} {{ page.categories }}{{ endif }}
+    {{ if page.title }} / {{ page.title }}{{ endif }}
+    </h2>
+
+
+  </div>
+  -->
+</div>
+</div>
+
 
 <!-- Content -->
 <div class="container">
