default layout image check

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,8 @@ layout: plain
   <!--</div>-->
 </div>
 
+{% page.image %}
+
 <div class="jumbotron">
 
   <div class="text-center" style="color: #fff;">
@@ -69,6 +71,9 @@ layout: plain
   </div>
   -->
 </div>
+
+{% endif %}
+
 </div>
 
 
