--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@ layout: plain
 <div class="jumbotron">
 
   <div class="text-center" style="color: #fff;">
-      <h3>Stable Isotope Geomicrobiology</h3>
+      <h3>Geomicrobial Physiology</h3>
     <h4>University of Colorado Boulder</h4>
   </div>
 
