--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
   <!-- Meta -->
   <meta charset="utf-8">
@@ -18,18 +15,10 @@
   <!-- Javascript -->
   <script src="/js/jquery-1.11.3.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
-  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+  <script src="/js/return_to_top.js"></script>
+  <script src="/js/google_analtics.js"></script>
+  <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
-
-  <!-- Google Analytics -->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-74777216-1', 'auto');
-    ga('send', 'pageview');
-  </script>
 
   {% if page.slideshow_speed %}
   <!-- Slide show -->
@@ -41,11 +30,3 @@
   {% endif %}
 
 </head>
-
-<body>
-
-{{ content }}
-
-</body>
-
-</html>
