--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,99 +1,16 @@
----
-layout: plain
----
-
-<!-- Navigation bar -->
-<div class="container">
-
-<div class="navbar navbar-inverse center" role="navigation" style = "margin-bottom: 10px;"> <!-- navbar-fixed-top -->
-  <!--<div class="container">-->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!--<a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span> Kopf Lab</a>-->
+<!DOCTYPE html>
+<html lang="en">
+  {% include head.html %}
+  <body>
+    {% include header.html %}
+    <!-- Content -->
+    <div class="container">
+      {{ content }}
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar" style="width: 100%; text-align: center;">
-      <ul class="nav navbar-nav">
-        <li><a href="/"><span class="glyphicon glyphicon-home"></span> Kopf Lab</a></li>
-        {% assign pages = site.pages | sort:"weight"  %}
-        {% for p in pages %}
-          {% if p.menu and p.align != "right" %}
-            <li class="{% if p.status == 'disabled' %}disabled{% elsif p.url == page.url %}active{% endif %}">
-              <a href="{% if p.status != 'disabled' %}{{ p.url }}{% endif %}">
-                {% if p.icon %} <span class="glyphicon glyphicon-{{ p.icon }}"></span> {% endif %}
-                {{ p.menu }}
-              </a>
-            </li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-
-      <ul class="nav navbar-nav navbar-right">
-        {% assign pages = site.pages | sort:"weight"  %}
-        {% for p in pages %}
-          {% if p.menu and p.align == "right" %}
-            <li class="{% if p.status == 'disabled' %}disabled{% elsif p.url == page.url %}active{% endif %}">
-              <a href="{{ p.url }}">
-                {% if p.icon %} <span class="glyphicon glyphicon-{{ p.icon }}"></span> {% endif %}
-                {{ p.menu }}
-              </a>
-            </li>
-          {% endif %}
-        {% endfor %}
-      </ul>
-
-    </div>
-  <!--</div>-->
-</div>
-
-{% if page.image %}
-
-<div class="jumbotron">
-
-  <div class="text-center" style="color: #fff;">
-      <h3>Geomicrobial Physiology</h3>
-    <h4>University of Colorado Boulder</h4>
-  </div>
-
-<!--
-  <div class="well">
-
-    <h2 style="color: #fff;">
-    {{ if page.menu }} {{ page.menu }}{{ endif }}
-    {{ if page.categories }} {{ page.categories }}{{ endif }}
-    {{ if page.title }} / {{ page.title }}{{ endif }}
-    </h2>
-
-
-  </div>
-  -->
-</div>
-
-{% endif %}
-
-</div>
-
-
-<!-- Content -->
-<div class="container">
-
-  {{ content }}
-
-</div>
-
-<!-- Footer -->
-<div class = "navbar navbar-default navbar-fixed-bottom">
-  <div class="container" style="padding: 0px;">
-    <p class="navbar-text small">
-      <a href="http://www.colorado.edu/geolsci/" target="_new">Department of Geosciences</a> |
-      <a href="http://www.colorado.edu/" target="_new">University of Colorado Boulder</a>
-    </p>
-    <p class="navbar-text pull-right small">
-      Copyright {{ site.time | date: '%Y' }} &copy; <a href="mailto:{{ site.email }}">Kopf Lab</a>
-      | Powered by <a href="http://jekyllrb.com">Jekyll</a> and <a href="http://github.com">GitHub</a>
-    </p>
-  </div>
-</div>
+    {% if page.map_location %}
+    <div id="googlemaps"></div>
+    {% endif %}
+    {% include footer.html %}
+  </body>
+  {% include googlemap.html %}
+</html>
