--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 <!-- Menu -->
 <div class="navigation-container">
   <nav role="navigation" class="navbar navbar-inverse">
-    <div class="container">
+    <div class="container overline">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
@@ -20,13 +20,13 @@
       </div>
       <!-- Collection of nav links, forms, and other content for toggling -->
       <div id="navbarCollapse" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-left">
+        <ul class="nav navbar-nav navbar-center">
           {% assign pages = site.pages | sort:"weight"  %}
           {% for p in pages %}
             {% if p.menu %}
               <li class="{% if p.status == 'disabled' %}disabled{% elsif p.url == page.url %}active{% endif %}">
                 <a href="{% if p.status != 'disabled' %}{{ p.url }}{% endif %}">
-                  {% if p.icon %} <span class="glyphicon glyphicon-{{ p.icon }}"></span> {% endif %}
+                  {% if p.icon %} <span class="{{ p.icon }}"></span> {% endif %}
                   {{ p.menu }}
                 </a>
               </li>
@@ -38,6 +38,7 @@
   </nav>
 </div>
 
+{% if page.images %}
 <!-- Slideshow -->
 <div class="slideshow-container">
   <div id="slideshow" class="carousel slide" data-ride="carousel">
@@ -62,7 +63,12 @@
     <!-- Title and Bullets -->
     <div class="slideshow-title">
       <table>
-        <tr><td><h3><a href="{{ page.url }}">{{ page.title }}</a></h3></td></tr>
+        <tr><td>
+          <h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
+          {% if page.subtitle %}
+          <h4>{{ page.subtitle }}</h4>
+          {% endif %}
+        </td></tr>
       </table>
     </div>
 
@@ -93,3 +99,21 @@
 
   </div>
 </div>
+
+{% else %}
+<!-- Regular title -->
+
+<div class="title-container">
+  <h1>{{ page.title }}</h1>
+  {% if page.subtitle %}
+  <h4>{{ page.subtitle }}</h4>
+  {% endif %}
+
+  <br/>
+  <span class="page-divider">
+    <span class="one"></span>
+    <span class="two"></span>
+  </span>
+</div>
+
+{% endif %}
