--- a/_sass/_frontpage.scss
+++ b/_sass/_frontpage.scss
@@ -1,4 +1,5 @@
 /***** Frontpage settings ******/
+// no longer used!
 
 // Note: not sure this is best done with the table, could probably also do just divs
 
@@ -48,7 +49,6 @@ $front-page-radius-image: 18px;
 
 .front-page-controls{
   position: relative;
-  top: 0px;
   margin: 0 auto;
 
   .carousel-indicators{
