site titles for non image and single image pages

--- a/css/style.scss
+++ b/css/style.scss
@@ -38,7 +38,7 @@ $navbar-border-bottom: 1px solid rgb(255, 255, 255);
 $slideshow-lines: 2px solid rgb(255, 255, 255);
 $slideshow-title-band: rgba(0, 0, 0, 0.4); // opacity
 $slideshow-title-color: rgb(255, 255, 255);
-$slideshow-title-height: 80px;
+$slideshow-title-height: 80px; // minimum height
 $slideshow-image-height: 300px;
 $slideshow-border-bottom: $navbar-border-bottom;
 $slideshow-caption-color: rgb(210, 210, 210);
