--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
   </nav>
 </div>
 
-{% if page.images %}
+{% if page.image %}
 <!-- Slideshow -->
 <div class="slideshow-container">
   <div id="slideshow" class="carousel slide" data-ride="carousel">
@@ -46,8 +46,9 @@
     <!-- Slides -->
     <div class="carousel-inner" role="listbox">
 
-      {% for image in page.images %}
-      <div class="item {% if forloop.index == 1 %} active {% endif %} slideshow-image" style="background-image: url('{{ image.file }}');">
+      {% for image in page.image %}
+      <div class="item {% if forloop.index == 1 %} active {% endif %} slideshow-image" style="background-image: url('{{ image.file }}'); {% if page.image_height %} height: {{page.image_height}}; {% endif %}">
+        {% if image.title %}
         <div class="slideshow-caption">
           <span class="title">{{ image.title }}</span>
           <br/><span class="location">{{ image.location }}</span>
@@ -55,15 +56,19 @@
           <br/><span class="photographer">Taken by {{ image.photographer }}</span>
           {% endif %}
         </div>
+        {% endif %}
       </div>
       {% endfor %}
 
     </div>
 
     <!-- Title and Bullets -->
-    <div class="slideshow-title">
+    <div class="slideshow-title" {% if page.image_height %} style="height: {{page.title_height}};" {% endif %}>
       <table>
-        <tr><td>
+        <tr><td
+          {% if page.image_height and page.image_height and page.image_height == page.title_height %}
+            style = "border-top: none;"
+          {% endif %}>
           <h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
           {% if page.subtitle %}
           <h4>{{ page.subtitle }}</h4>
@@ -72,6 +77,7 @@
       </table>
     </div>
 
+    {% if page.image.size > 1 %}
     <!-- Left and right controls -->
     <div class = "slideshow-arrows">
       <a class="left carousel-control" href="#slideshow" role="button" data-slide="prev">
@@ -83,11 +89,13 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+    {% endif %}
 
+    {% if page.image.size > 1 %}
     <!-- Bullet controls -->
     <div class = "slideshow-bullets">
       <ol class="carousel-indicators">
-        {% for image in page.images %}
+        {% for image in page.image %}
           {% if forloop.index == 1 %}
             <li data-target="#slideshow" data-slide-to="{{ forloop.index0 }}" class="active"></li>
           {% else %}
@@ -96,6 +104,7 @@
         {% endfor %}
       </ol>
     </div>
+    {% endif %}
 
   </div>
 </div>
