--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <!-- Footer -->
 <div class="footer-container">
+  <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
   <div class="container">
     <div class="top">
       <h3><a href="{{ site.url }}">Kopf Lab</a></h3>
