--- a/css/style.scss
+++ b/css/style.scss
@@ -22,7 +22,7 @@ $navbar-inverse-border: $navbar-inverse-bg;
 
 // Inverted navbar links
 $navbar-inverse-link-color:                 #cfb87b;
-$navbar-inverse-link-hover-color:           rgb(255, 255, 255);
+$navbar-inverse-link-hover-color:           lighten($navbar-inverse-link-color, 50%);
 $navbar-inverse-link-hover-bg:              transparent !default;
 $navbar-inverse-link-active-color:          $navbar-inverse-link-hover-color !default;
 $navbar-inverse-link-active-bg:             $navbar-inverse-bg;
@@ -35,18 +35,20 @@ $logo-url: "/images/cub_kopf_lab_w.png";
 $logo-height: 70px;
 $navbar-bgrd-color: $navbar-inverse-bg;
 $navbar-border-bottom: 1px solid rgb(255, 255, 255);
-$slideshow-lines: 2px solid rgb(255, 255, 255);
-$slideshow-title-band: rgba(0, 0, 0, 0.4); // opacity
-$slideshow-title-color: rgb(255, 255, 255);
-$slideshow-title-height: 80px; // minimum height
-$slideshow-image-height: 300px;
-$slideshow-border-bottom: $navbar-border-bottom;
-$slideshow-caption-color: rgb(210, 210, 210);
+$title-band-borders: 2px solid rgb(255, 255, 255);
+$title-band-bg: rgba(0, 0, 0, 0.4); // opacity
+$title-text-color: rgb(255, 255, 255);
+$title-link-color: #cfb87b;
+$title-link-color-active: lighten($title-link-color, 50%);
+$title-height: 80px; // minimum height
+$title-image-height: 300px;
+$title-image-border-bottom: $navbar-border-bottom;
+$title-image-caption-color: rgb(210, 210, 210);
 $map-height: 200px;
-
 $footer-bgrd-color: $logo-bgrd-color;
 $footer-text-color: rgb(255, 255, 255);
 $footer-link-color: #cfb87b;
+$footer-link-color-active: lighten($footer-link-color, 50%);
 
 /***** Custom CSS *****/
 @media (min-width: 768px){
@@ -106,7 +108,8 @@ body {
 
 .slideshow-container {
 
-  border-bottom: $slideshow-border-bottom;
+  border-bottom: $title-image-border-bottom;
+  background-color: rgb(0, 0, 0);
 
   .slideshow-title {
     position: absolute;
@@ -115,7 +118,7 @@ body {
     left: 0;
     right: 0;
     width: 100%;
-    height: $slideshow-title-height;
+    height: $title-height;
     margin: auto;
     z-index: 75;
 
@@ -124,20 +127,28 @@ body {
       width: 100%;
       td {
         width: 100%;
-        background: $slideshow-title-band;
-        border-top: $slideshow-lines;
-        border-bottom: $slideshow-lines;
+        background: $title-band-bg;
+        border-top: $title-band-borders;
+        border-bottom: $title-band-borders;
         text-align: center;
         vertical-align: middle;
         font-family: sans-serif;
-        color: $slideshow-title-color;
-        a { text-decoration: none; color: inherit; }
-        h3, h4 {
+        color: $title-text-color;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        a {
+      	  color: $title-link-color;
+      	  &:active, &:focus, &:hover {
+      	    color: $title-link-color-active;
+            text-decoration: none;
+      	  }
+      	}
+        h1, h2, h3, h4 {
           margin: 0px;
           padding-left: 65px;
           padding-right: 65px;
-          padding-top: 10px;
-          padding-bottom: 10px;
+          padding-top: 5px;
+          padding-bottom: 5px;
         }
       }
     }
@@ -161,7 +172,7 @@ body {
 
   .slideshow-image {
     width: 100%;
-    height: $slideshow-image-height;
+    height: $title-image-height;
     background-color: transparent;
     background-repeat: no-repeat;
     background-size: cover;
@@ -177,7 +188,7 @@ body {
     right: 0px;
     padding-top: 15px;
     padding-right: 15px;
-    color: $slideshow-caption-color;
+    color: $title-image-caption-color;
     text-align: right;
     text-shadow: $carousel-text-shadow;
     font-family: sans-serif;
@@ -191,6 +202,47 @@ body {
 
 }
 
+/** Actual Slideshow **/
+#slideshow {
+  display:none; // to allow random pick of first image
+}
+
+/* Fade transitions for carousel (add "carousel-fade" to class of <div id="slideshow">) */
+$slide-transition: 0.7s ease-in-out opacity;
+.carousel-fade {
+    .carousel-inner {
+        .item {
+          -webkit-transition: $slide-transition;
+             -moz-transition: $slide-transition;
+               -o-transition: $slide-transition;
+                  transition: $slide-transition;
+        }
+
+        .item,
+        .active.left,
+        .active.right {
+            opacity: 0;
+        }
+
+        .active,
+        .next.left,
+        .prev.right {
+            opacity: 1;
+        }
+
+        .next,
+        .prev,
+        .active.left,
+        .active.right {
+            left: 0;
+            transform: translate3d(0, 0, 0);
+        }
+    }
+
+    .carousel-control {
+        z-index: 2;
+    }
+}
 
 /**** General CSS ****/
 
@@ -205,21 +257,6 @@ body {
 .framed {
   border: 2px solid #000000;
 }
-
-.page-top-image {
-  width:100%;
-  height:300px;
-  background-size:cover;
-  border-bottom: 3px solid #222;
-  color: white; // text color
-  padding: 50px;
-  font-size: 14pt;
-  img { width: 100%; }
-}
-
-
-
-
 
 /***** Image settings ******/
 .border {
@@ -289,11 +326,8 @@ body {
   a {
 	  color: $footer-link-color;
 	  &:active, &:focus, &:hover {
-	    color: darken($footer-link-color, 20%);
+	    color: $footer-link-color-active;
       text-decoration: none;
-	  }
-	  &:active, &:focus {
-	    outline: none;
 	  }
 	}
 
