--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
           {% assign pages = site.pages | sort:"weight"  %}
           {% for p in pages %}
             {% if p.menu %}
-              <li class="{% if p.status == 'disabled' %}disabled{% elsif p.url == page.url or (p.categories and p.category == page.categories.first) %}active{% endif %}">
+              <li class="{% if p.status == 'disabled' %}disabled{% elsif p.url == page.url or p.category == page.categories.first %}active{% endif %}">
                 <a href="{% if p.status != 'disabled' %}{{ p.url }}{% endif %}">
                   {% if p.icon %} <span class="{{ p.icon }}"></span> {% endif %}
                   {{ p.menu }}
@@ -37,93 +37,3 @@
     </div>
   </nav>
 </div>
-
-{% if page.image %}
-<!-- Slideshow -->
-<div class="slideshow-container">
-  <div id="slideshow" class="carousel slide carousel-fade" data-pause="hover"
-      data-ride="carousel" {% if page.image_interval %} data-interval="{{ page.image_interval }}" {% endif %}>
-
-    <!-- Slides -->
-    <div class="carousel-inner" role="listbox">
-
-      {% for image in page.image %}
-      <div class="item {% if forloop.index == 1 %} active {% endif %} slideshow-image" style="background-image: url('{{ image.file }}'); {% if page.image_height %} height: {{page.image_height}}; {% endif %}">
-        {% if image.title %}
-        <div class="slideshow-caption">
-          <span class="title">{{ image.title }}</span>
-          <br/><span class="location">{{ image.location }}</span>
-          {% if image.photographer %}
-          <br/><span class="photographer">Taken by {{ image.photographer }}</span>
-          {% endif %}
-        </div>
-        {% endif %}
-      </div>
-      {% endfor %}
-
-    </div>
-
-    <!-- Title and Bullets -->
-    <div class="slideshow-title" {% if page.image_height %} style="height: {{page.title_height}};" {% endif %}>
-      <table>
-        <tr><td
-          {% if page.image_height and page.image_height and page.image_height == page.title_height %}
-            style = "border-top: none;"
-          {% endif %}>
-          <h3>{{ page.title }}</h3>
-          {% if page.subtitle %}
-          <h4>{{ page.subtitle }}</h4>
-          {% endif %}
-        </td></tr>
-      </table>
-    </div>
-
-    {% if page.image.size > 1 %}
-    <!-- Left and right controls -->
-    <div class = "slideshow-arrows">
-      <a class="left carousel-control" href="#slideshow" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#slideshow" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-    {% endif %}
-
-    {% if page.image.size > 1 %}
-    <!-- Bullet controls -->
-    <div class = "slideshow-bullets">
-      <ol class="carousel-indicators">
-        {% for image in page.image %}
-          {% if forloop.index == 1 %}
-            <li data-target="#slideshow" data-slide-to="{{ forloop.index0 }}" class="active"></li>
-          {% else %}
-            <li data-target="#slideshow" data-slide-to="{{ forloop.index0 }}"></li>
-          {% endif %}
-        {% endfor %}
-      </ol>
-    </div>
-    {% endif %}
-
-  </div>
-</div>
-
-{% else %}
-<!-- Regular title -->
-
-<div class="title-container">
-  <h1>{{ page.title }}</h1>
-  {% if page.subtitle %}
-  <h4>{{ page.subtitle }}</h4>
-  {% endif %}
-
-  <br/>
-  <span class="page-divider">
-    <span class="one"></span>
-    <span class="two"></span>
-  </span>
-</div>
-
-{% endif %}
