--- a/css/style.scss
+++ b/css/style.scss
@@ -417,7 +417,8 @@ $slide-transition: 0.7s ease-in-out opacity;
 $news-date-bg-color: $body-link-color;//#cfb87b;
 $news-date-text-color: #fff;
 .news-item {
-  padding-top: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   .news-date {
     margin-left: 10px;
     margin-right: 50px;
