footer HTML fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
       <p><i class="glyphicon glyphicon-envelope"></i>&nbsp;
       <a href="#" data-toggle="tooltip" data-delay='{"show": 300, "hide": 3000 }'
                   data-toggle="tooltip" data-html="true" data-placement="top"
-                  title="<u>Address:</u></p>{{ site.address }}">
+                  title="<p><u>Address:</u></p>{{ site.address }}">
         <span class="info">Postal</span>
       </a></p>
     </div>
